@@ -1,3 +1,8 @@
+2008-07-15  Mirco Bauer <meebey@meebey.net> 
+
+	* Chats/SessionChatView.cs, Chats/PersonChatView.cs, Chats/GroupChatView.cs,
+	  Chats/ChatView.cs: Fixed icon / label position on tabs.
+
 2008-07-14  Mirco Bauer <meebey@meebey.net> 
 
 	* Entry.cs: Fixed brace in help output.
